# Phonopy-Spectroscopy

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  start_up.sh
.github/workflows/: docs.yml
background/: index.html
credit/: index.html
development/: index.html
docs/: credit.md  development.md  index.md  installation.md
docs/reference/: phonon.md  structure.md
docs/tutorials/: overview.md
docs/tutorials/.ipynb_checkpoints/: benzene_derivatives_tutorial-checkpoint.md  test_tutorial-checkpoint.ipynb
example/si/: POSCAR.Opt.Prim  band.hdf5  band.yaml  irreps.yaml  kappa-m646464-g0.hdf5  mesh.hdf5  mesh.yaml  phonopy.yaml
example/si/raman_ref/: POSCAR-0004-01  POSCAR-0004-02  POSCAR-0005-01  (+58 more)
example/snse-pnma/: POSCAR.Opt  irreps.yaml  mesh.yaml  phonopy.yaml
installation/: index.html
lib/phonopy_spectroscopy/: constants.py  distributions.py  intensity_base.py  irreps.py  phonon.py  spectrum.py  spectrum_base.py  structure.py  units.py
reference/phonon/: index.html
reference/structure/: index.html
search/: search_index.json
src/phonopy_spectroscopy/: __init__.py  _version.py  constants.py  instrument.py  phonon.py  units.py
tests/: comparison_helper.py  io_helper.py  test_io.py  test_ir_calc.py  test_ir_sim_snse.py  test_raman_calc.py  test_raman_sim_si.py  test_raman_sim_si_model.py  test_utilities_maths.py
tutorials/SiO2_tutorial/: index.html
tutorials/benzene_derivatives_tutorial/: index.html
tutorials/overview/: index.html
tutorials/test_tutorial/: index.html
(+37 files in other folders)
